--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=4
+PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -125,15 +125,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=1072)
+LastSize=(X=1926,Y=990)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=38)
-NewWindowWidth=1914
-NewWindowHeight=1072
+NewWindowWidth=1926
+NewWindowHeight=990
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -308,7 +308,7 @@ WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputMod
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 BoxComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 BPRegatta_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
-PropertyWrapper=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
+PropertyWrapper=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 SceneComponent=
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
@@ -385,9 +385,9 @@ K2Node_FunctionResult=StaticMeshComponent.Collision.Collision,BoxComponent.Colli
 Rudder Angle To Turning Slider Pct=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 SceneCaptureComponent2D=
 UserDefinedStruct=
-BP_Tile_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
+BP_Tile_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 MapGenerator_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
-K2Node=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
+K2Node=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 DirectionalLight=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 PlayerStart=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,CameraActor.PostProcess.Global Illumination
 K2Node_MacroInstance=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
@@ -431,6 +431,7 @@ CinematicCameraActor_C=StaticMeshComponent.Collision.Collision,SceneCaptureCompo
 Load Control Points From Config=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 Load Control Points From Config_4=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 Widget=
+K2Node_FormatText=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 
 [EditorStartup]
 LastLevel=/Game/Levels/LVTesting
@@ -1955,10 +1956,12 @@ VerticalBox.Performance=True
 VerticalBox.Rendering=True
 VerticalBox.Navigation=True
 VerticalBox.Localization=True
+K2Node_FormatText.Arguments=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1968,7 +1971,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1989,7 +1991,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=SpriteEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
 
 [MessageLog]
 LastLogListing=PIE
@@ -2065,16 +2066,16 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem0=/Game/Map/tutorial_tabel
 MRUItem1=/Game/Blueprints/Regatta/BPRegatta
-MRUItem2=/Game/Blueprints/UI/MainMenu
-MRUItem3=/Game/Minimap/MinimapWidget
-MRUItem4=/Game/Blueprints/UI/ConfigurationMenu
-MRUItem5=/Game/Levels/MainMenuMap
-MRUItem6=/Game/Levels/RaceMap
-MRUItem7=/Game/Blueprints/Regatta/SnapshotsTarget
-MRUItem8=/Game/Blueprints/CinematicCamera/CinematicCameraActor
-MRUItem9=/Game/Map/tutorial_tabel
+MRUItem2=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem3=/Game/Blueprints/UI/MainMenu
+MRUItem4=/Game/Minimap/MinimapWidget
+MRUItem5=/Game/Blueprints/UI/ConfigurationMenu
+MRUItem6=/Game/Levels/MainMenuMap
+MRUItem7=/Game/Levels/RaceMap
+MRUItem8=/Game/Blueprints/Regatta/SnapshotsTarget
+MRUItem9=/Game/Blueprints/CinematicCamera/CinematicCameraActor
 MRUItem10=/Game/Map/MapGenerator
 MRUItem11=/Game/Map/BP_Wall
 MRUItem12=/Game/Blueprints/Regatta/RegattaUI
@@ -2476,8 +2477,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2507,7 +2508,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=26.667
+ScreenPosition=X=2137.000 Y=172.000
 WindowSize=X=1276.000 Y=696.000
 InitiallyMaximized=True
 
@@ -3682,8 +3683,8 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [InputDebuggingEditor]
