minimapa sa po prekliknuti nastavi na ovladanu lod

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=3
+PreviewFeatureLevel=4
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -98,7 +98,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=2093,Y=93)
+NewWindowPosition=(X=183,Y=142)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -125,15 +125,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1544,Y=784)
+LastSize=(X=1550,Y=824)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=2093,Y=93)
-NewWindowWidth=1544
-NewWindowHeight=784
+MultipleInstancePositions=(X=183,Y=142)
+NewWindowWidth=1550
+NewWindowHeight=824
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -179,7 +179,6 @@ MRUItem5=/Game/Levels/OrthogonalMap
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
@@ -432,9 +431,11 @@ Load Control Points From Config=StaticMeshComponent.Collision.Collision,SceneCap
 Load Control Points From Config_4=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 Widget=
 K2Node_FormatText=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
+MaterialInstanceConstant=
+Image=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 
 [EditorStartup]
-LastLevel=/Game/Levels/RaceMap
+LastLevel=/Game/Levels/LVTesting
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -660,12 +661,12 @@ MaterialExpressionMultiply="\"Object\" "
 MaterialExpressionComment="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" "
-Widget="\"Object\" \"Object.Layout.Slot\" "
-Visual="\"Object\" \"Object.Layout.Slot\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.BackgroundImage.OutlineSettings\" \"Object.Appearance.FillColorAndOpacity\" "
 EdGraphNode_Comment="\"Object\" "
 RegattaUI_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Layout.Slot\" "
 RadialSlider="\"Object\" \"Object.Appearance.SliderProgressColor\" \"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" "
 SpringArmComponent="\"Object\" "
 SceneCaptureComponent2D="\"Object\" "
@@ -674,7 +675,7 @@ TextureRenderTarget2D="\"Object\" "
 TextureRenderTarget="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Layout.Slot\" "
+Image="\"Object\" "
 PaperSpriteComponent="\"Object\" "
 Texture2D="\"Object\" "
 PaperSprite="\"Object\" "
@@ -698,7 +699,7 @@ MaterialExpressionAdd="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MinimapWidget_C="\"Object\" "
+MinimapWidget_C="\"Object\" \"Object.Layout.Slot\" "
 Button="\"Object\" \"Object.Layout.Slot\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot\" "
 TextBlock="\"Object\" \"Object.Layout.Slot\" "
@@ -712,6 +713,8 @@ SailingGameInstance_C="\"Object\" "
 GameInstance="\"Object\" "
 EditableTextBox="\"Object\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" "
+MaterialExpressionTextureSampleParameter2D="\"Object\" "
+MaterialExpressionTextureSampleParameter="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1957,20 +1960,27 @@ VerticalBox.Rendering=True
 VerticalBox.Navigation=True
 VerticalBox.Localization=True
 K2Node_FormatText.Arguments=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
@@ -1984,17 +1994,14 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=SpriteEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Map/BP_Buoy.BP_Buoy
-OpenAssetsAtExit=/Game/Map/BP_Start.BP_Start
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
 OpenAssetsAtExit=/Game/Map/BP_Tile.BP_Tile
+OpenAssetsAtExit=/Game/Minimap/MinimapWidget.MinimapWidget
 
 [MessageLog]
 LastLogListing=PIE
@@ -2070,36 +2077,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Map/MapGenerator
-MRUItem1=/Game/Map/tutorial_tabel
-MRUItem2=/Game/Map/BP_Tile
-MRUItem3=/Game/Blueprints/Regatta/BPRegatta
-MRUItem4=/Game/Blueprints/SailingGameInstance
+MRUItem0=/Game/Minimap/MinimapWidget
+MRUItem1=/Game/Map/BP_Tile
+MRUItem2=/Game/Blueprints/Regatta/BPRegatta
+MRUItem3=/Game/Minimap/MinimapMaterial_Inst
+MRUItem4=/Game/Minimap/MinimapMaterial
 MRUItem5=/Game/Map/BP_Start
 MRUItem6=/Game/Map/BP_Buoy
-MRUItem7=/Game/Levels/RaceMap
-MRUItem8=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem9=/Game/Blueprints/UI/MainMenu
-MRUItem10=/Game/Minimap/MinimapWidget
-MRUItem11=/Game/Blueprints/UI/ConfigurationMenu
-MRUItem12=/Game/Levels/MainMenuMap
-MRUItem13=/Game/Blueprints/Regatta/SnapshotsTarget
-MRUItem14=/Game/Blueprints/CinematicCamera/CinematicCameraActor
-MRUItem15=/Game/Map/BP_Wall
-MRUItem16=/Game/Blueprints/Regatta/RegattaUI
-MRUItem17=/Game/Map/PhysicsEngine
-MRUItem18=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem19=/Game/Blueprints/Gamemodes/RegattaTesting
-MRUItem20=/Game/Levels/LV_Testing2
-MRUItem21=/Game/Map/tutorialStracture
-MRUItem22=/Game/Minimap/scroll
-MRUItem23=/Game/Minimap/MinimapMaterial
-MRUItem24=/Game/Levels/LVTesting
-MRUItem25=/Game/Blueprints/UI/MainMenuClass
-MRUItem26=/Game/Levels/ConfigurationMenuMap
-MRUItem27=/Game/Levels/OrthogonalMap
-MRUItem28=/Game/Minimap/sailboatIcon_Sprite
-MRUItem29=/Game/Blueprints/UI/ConfigurationMenuClass
+MRUItem7=/Game/Map/MapGenerator
+MRUItem8=/Game/Map/tutorial_tabel
+MRUItem9=/Game/Blueprints/SailingGameInstance
+MRUItem10=/Game/Levels/RaceMap
+MRUItem11=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem12=/Game/Blueprints/UI/MainMenu
+MRUItem13=/Game/Blueprints/UI/ConfigurationMenu
+MRUItem14=/Game/Levels/MainMenuMap
+MRUItem15=/Game/Blueprints/Regatta/SnapshotsTarget
+MRUItem16=/Game/Blueprints/CinematicCamera/CinematicCameraActor
+MRUItem17=/Game/Map/BP_Wall
+MRUItem18=/Game/Blueprints/Regatta/RegattaUI
+MRUItem19=/Game/Map/PhysicsEngine
+MRUItem20=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem21=/Game/Blueprints/Gamemodes/RegattaTesting
+MRUItem22=/Game/Levels/LV_Testing2
+MRUItem23=/Game/Map/tutorialStracture
+MRUItem24=/Game/Minimap/scroll
+MRUItem25=/Game/Levels/LVTesting
+MRUItem26=/Game/Blueprints/UI/MainMenuClass
+MRUItem27=/Game/Levels/ConfigurationMenuMap
+MRUItem28=/Game/Levels/OrthogonalMap
+MRUItem29=/Game/Minimap/sailboatIcon_Sprite
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor;
@@ -2163,6 +2170,7 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 /Game/Blueprints/CinematicCamera/CinematicCameraActor.CinematicCameraActor=0
 /Game/Blueprints/Regatta/SnapshotsTarget.SnapshotsTarget=0
 /Game/Blueprints/UI/MainMenu.MainMenu=0
+/Game/Minimap/MinimapMaterial_Inst.MinimapMaterial_Inst=1
 
 [MaterialEditor]
 PrimType=1
@@ -2512,8 +2520,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=2137.000 Y=172.000
-WindowSize=X=1276.000 Y=696.000
+ScreenPosition=X=0.000 Y=24.667
+WindowSize=X=1276.000 Y=700.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3687,8 +3695,8 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [InputDebuggingEditor]
@@ -3858,7 +3866,7 @@ ColumnVisibilitySettings=(ColumnName="KeyFrame",bIsVisible=False)
 ColumnVisibilitySettings=(ColumnName="ColorPicker",bIsVisible=True)
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
