--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,14 +125,14 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1592,Y=990)
+LastSize=(X=1618,Y=990)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=198,Y=49)
-NewWindowWidth=1592
+NewWindowWidth=1618
 NewWindowHeight=990
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
@@ -1971,10 +1971,11 @@ MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1982,7 +1983,6 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2001,10 +2001,10 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=SpriteEditor
-OpenAssetsAtExit=/Game/Levels/RaceMap.RaceMap:PersistentLevel.RaceMap
 OpenAssetsAtExit=/Game/Map/MapGenerator.MapGenerator
 OpenAssetsAtExit=/Game/Map/BP_Tile.BP_Tile
 OpenAssetsAtExit=/Game/Map/BP_Wall.BP_Wall
+OpenAssetsAtExit=/Game/Map/tutorial_tabel.tutorial_tabel
 
 [MessageLog]
 LastLogListing=PIE
@@ -2022,7 +2022,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Regatta
+ContentBrowserDrawer.SelectedPaths=/Game/Map
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2030,8 +2030,8 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta
 ContentBrowserDrawer.JumpMRU=/All/Game/Map
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/CinematicCamera
@@ -2080,18 +2080,18 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Map/BP_Wall
-MRUItem1=/Game/Levels/RaceMap
-MRUItem2=/Game/Blueprints/SailingGameInstance
-MRUItem3=/Game/Map/BP_Tile
-MRUItem4=/Game/Map/MapGenerator
-MRUItem5=/Game/Minimap/MinimapWidget
-MRUItem6=/Game/Blueprints/Regatta/BPRegatta
-MRUItem7=/Game/Minimap/MinimapMaterial_Inst
-MRUItem8=/Game/Minimap/MinimapMaterial
-MRUItem9=/Game/Map/BP_Start
-MRUItem10=/Game/Map/BP_Buoy
-MRUItem11=/Game/Map/tutorial_tabel
+MRUItem0=/Game/Map/tutorial_tabel
+MRUItem1=/Game/Map/BP_Wall
+MRUItem2=/Game/Map/BP_Tile
+MRUItem3=/Game/Map/MapGenerator
+MRUItem4=/Game/Levels/RaceMap
+MRUItem5=/Game/Blueprints/SailingGameInstance
+MRUItem6=/Game/Minimap/MinimapWidget
+MRUItem7=/Game/Blueprints/Regatta/BPRegatta
+MRUItem8=/Game/Minimap/MinimapMaterial_Inst
+MRUItem9=/Game/Minimap/MinimapMaterial
+MRUItem10=/Game/Map/BP_Start
+MRUItem11=/Game/Map/BP_Buoy
 MRUItem12=/Game/Blueprints/Regatta/BPRegattaController
 MRUItem13=/Game/Blueprints/UI/MainMenu
 MRUItem14=/Game/Blueprints/UI/ConfigurationMenu
@@ -2492,8 +2492,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2523,7 +2523,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=2208.000 Y=112.000
+ScreenPosition=X=2567.000 Y=0.000
 WindowSize=X=1276.000 Y=700.000
 InitiallyMaximized=True
 
