update nazvov datatablu a udajov v nom

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,14 +125,14 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1618,Y=990)
+LastSize=(X=1620,Y=990)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=198,Y=49)
-NewWindowWidth=1618
+NewWindowWidth=1620
 NewWindowHeight=990
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
@@ -385,7 +385,7 @@ Rudder Angle To Turning Slider Pct=StaticMeshComponent.Collision.Collision,BoxCo
 SceneCaptureComponent2D=
 UserDefinedStruct=
 BP_Tile_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
-MapGenerator_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
+MapGenerator_C=
 K2Node=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 DirectionalLight=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 PlayerStart=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
@@ -1971,11 +1971,12 @@ MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1994,7 +1995,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -2004,7 +2004,6 @@ RecentAssetEditors=SpriteEditor
 OpenAssetsAtExit=/Game/Map/MapGenerator.MapGenerator
 OpenAssetsAtExit=/Game/Map/BP_Tile.BP_Tile
 OpenAssetsAtExit=/Game/Map/BP_Wall.BP_Wall
-OpenAssetsAtExit=/Game/Map/tutorial_tabel.tutorial_tabel
 
 [MessageLog]
 LastLogListing=PIE
@@ -2080,30 +2079,30 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Map/tutorial_tabel
-MRUItem1=/Game/Map/BP_Wall
-MRUItem2=/Game/Map/BP_Tile
-MRUItem3=/Game/Map/MapGenerator
-MRUItem4=/Game/Levels/RaceMap
-MRUItem5=/Game/Blueprints/SailingGameInstance
-MRUItem6=/Game/Minimap/MinimapWidget
-MRUItem7=/Game/Blueprints/Regatta/BPRegatta
-MRUItem8=/Game/Minimap/MinimapMaterial_Inst
-MRUItem9=/Game/Minimap/MinimapMaterial
-MRUItem10=/Game/Map/BP_Start
-MRUItem11=/Game/Map/BP_Buoy
-MRUItem12=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem13=/Game/Blueprints/UI/MainMenu
-MRUItem14=/Game/Blueprints/UI/ConfigurationMenu
-MRUItem15=/Game/Levels/MainMenuMap
-MRUItem16=/Game/Blueprints/Regatta/SnapshotsTarget
-MRUItem17=/Game/Blueprints/CinematicCamera/CinematicCameraActor
-MRUItem18=/Game/Blueprints/Regatta/RegattaUI
-MRUItem19=/Game/Map/PhysicsEngine
-MRUItem20=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem21=/Game/Blueprints/Gamemodes/RegattaTesting
-MRUItem22=/Game/Levels/LV_Testing2
-MRUItem23=/Game/Map/tutorialStracture
+MRUItem0=/Game/Map/RaceStructure
+MRUItem1=/Game/Map/RaceDataTable
+MRUItem2=/Game/Levels/RaceMap
+MRUItem3=/Game/Map/BP_Wall
+MRUItem4=/Game/Map/BP_Tile
+MRUItem5=/Game/Map/MapGenerator
+MRUItem6=/Game/Blueprints/SailingGameInstance
+MRUItem7=/Game/Minimap/MinimapWidget
+MRUItem8=/Game/Blueprints/Regatta/BPRegatta
+MRUItem9=/Game/Minimap/MinimapMaterial_Inst
+MRUItem10=/Game/Minimap/MinimapMaterial
+MRUItem11=/Game/Map/BP_Start
+MRUItem12=/Game/Map/BP_Buoy
+MRUItem13=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem14=/Game/Blueprints/UI/MainMenu
+MRUItem15=/Game/Blueprints/UI/ConfigurationMenu
+MRUItem16=/Game/Levels/MainMenuMap
+MRUItem17=/Game/Blueprints/Regatta/SnapshotsTarget
+MRUItem18=/Game/Blueprints/CinematicCamera/CinematicCameraActor
+MRUItem19=/Game/Blueprints/Regatta/RegattaUI
+MRUItem20=/Game/Map/PhysicsEngine
+MRUItem21=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem22=/Game/Blueprints/Gamemodes/RegattaTesting
+MRUItem23=/Game/Levels/LV_Testing2
 MRUItem24=/Game/Minimap/scroll
 MRUItem25=/Game/Levels/LVTesting
 MRUItem26=/Game/Blueprints/UI/MainMenuClass
@@ -2492,8 +2491,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
