opraveny kurzor v main menu level

--- a/Unreal Engine/Sailing/Config/DefaultEngine.ini
+++ b/Unreal Engine/Sailing/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-EditorStartupMap=/Game/Levels/LVTesting.LVTesting
+GameDefaultMap=/Game/Levels/MainMenuMap.MainMenuMap
+EditorStartupMap=/Game/Levels/MainMenuMap.MainMenuMap
 GameInstanceClass=/Game/Blueprints/SailingGameInstance.SailingGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
